# lodestar

./: .env.example  .pre-commit-config.yaml  ACKNOWLEDGMENTS.md  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  RELEASE_NOTES_v0.1.0.md  ROADMAP.md  SECURITY.md  THREAT_MODEL.md  app.py  build-macos-app.sh  docker-compose.gpu-amd.yml  docker-compose.gpu-nvidia.yml  docker-compose.yml  install-lite.ps1  install-lite.sh  install-service.sh  lodestar-ui.service  package.json  pyproject.toml  requirements-optional.txt  requirements.txt  setup.py  start-macos.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: check-issue-description.js
.github/workflows/: ci.yml  docker-publish.yml
companion/: README.md  __init__.py  routes.py
core/: auth.py  constants.py  database.py  middleware.py  platform_compat.py
docker/: entrypoint.sh  gpu.amd.yml  gpu.nvidia.yml
docs/: benchmarks.md  branding-assets.md  configuration.md  email-outlook.md  index.html  install.md  media-checklist.md  plugin-authoring.md  pr-blocker-audit.md  qa-results.md  release-notes.md  usage.md
docs/adr/: 0001-fork-odysseus-as-lodestar.md  0002-opencode-provider-vs-playwright-node-coupling.md  0003-embedded-sqlite-vec-memory.md  0004-mcp-tool-allowlist.md  README.md
docs/benchmarks/: phase2-baseline.md  phase2-results.md  phase3-results.md  phase4-baseline.md  phase4-results.md
integrations/claude/: README.md
integrations/codex/: README.md
mcp_servers/: email_server.py  image_gen_server.py  memory_server.py
plugins/: __init__.py
plugins/lodestar_csv/: __init__.py
plugins/lodestar_datetime/: __init__.py
plugins/lodestar_filesearch/: __init__.py
plugins/lodestar_git/: __init__.py
plugins/lodestar_rss/: __init__.py
plugins/lodestar_sqlquery/: __init__.py
plugins/lodestar_textstats/: __init__.py
routes/: approval_routes.py  auth_routes.py  calendar_routes.py  chat_routes.py  code_routes.py  codex_routes.py  contacts_routes.py  cookbook_helpers.py  cookbook_routes.py  diagnostics_routes.py  email_helpers.py  email_pollers.py  email_routes.py  hwfit_routes.py  mcp_routes.py  memory_routes.py  model_routes.py  note_routes.py  plugin_routes.py  preset_routes.py  prompt_routes.py  readlater_routes.py  research_routes.py  shell_routes.py  skills_routes.py  task_routes.py  workspace_routes.py
scripts/: bench_harness.py  check-docker-amd-gpu.sh  check-docker-gpu.sh  diffusion_server.py  lodestar  lodestar-backup  lodestar-calendar  lodestar-contacts  lodestar-cookbook  lodestar-docs  lodestar-gallery  lodestar-logs  lodestar-mail  lodestar-mcp  lodestar-memory  lodestar-notes  lodestar-personal  lodestar-plugins  lodestar-preset  lodestar-research  lodestar-sessions  lodestar-signature  lodestar-skills  lodestar-tasks  lodestar-theme  lodestar-webhook  pr_blocker_audit.py  profile_imports.py
scripts/_lib/: cli.py
scripts/demo_email/: demo_account.py  manage.sh  seed_demo_emails.py
services/docs/: __init__.py  service.py
services/hwfit/: fit.py
services/search/: core.py  providers.py
services/shell/: service.py
src/: agent_loop.py  ai_interaction.py  app_initializer.py  builtin_actions.py  builtin_mcp.py  caldav_sync.py  caldav_writeback.py  chatgpt_subscription.py  constants.py  context_compactor.py  copilot.py  document_processor.py  endpoint_resolver.py  env_compat.py  lazy_globals.py  llm_core.py  mcp_manager.py  mcp_oauth.py  memory_provider.py  memory_vector.py  model_discovery.py  rag_vector.py  settings.py  sqlite_vec_store.py  task_scheduler.py  teacher_escalation.py  tool_execution.py  tool_implementations.py  tool_index.py  tool_schemas.py  upload_limits.py  url_safety.py  visual_report.py  webhook_manager.py
src/agent_approval/: models.py
src/agent_tools/: subprocess_tools.py
src/code_workspace/: models.py
src/plugins/: __init__.py  loader.py  manifest.py
src/prompt_library/: models.py
src/providers/: __init__.py  embedding_adapters.py  embeddings.py  search.py  selection.py  vectorstore.py
src/read_later/: models.py
src/search/: providers.py
static/: app.js  index.html  login.html  manifest.json  style.css  sw.js
static/js/: a11y.js  admin.js  approvals.js  censor.js  chat.js  chatRenderer.js  code.js  cookbook-diagnosis.js  cookbook.js  cookbookRunning.js  cookbookServe.js  document.js  emailInbox.js  emailLibrary.js  gallery.js  galleryEditor.js  group.js  hwfit_wizard.js  init.js  keyboard-shortcuts.js  markdown.js  pluginPanels.js  presets.js  prompts.js  providers.js  readlater.js  sessions.js  settings.js  ui.js  (+4 more)
tests/: TESTING_STANDARD.md  test_action_intents.py  test_ai_interaction_owner_scope.py  test_app.py  test_backup_cli_security.py  test_caldav_url_hardening.py  test_calendar_cli_name.py  test_chat_upload_limit_config.py  test_contacts_cli_rows.py  test_cookbook_cli_state.py  test_cookbook_dependency_completion_regression.py  test_cookbook_helpers.py  test_docs_cli_content_length.py  test_embedding_adapters.py  test_endpoint_probing.py  test_forwarded_message_divider.py  test_gallery_cli_album_count.py  test_gallery_cli_preview.py  test_gpu_compose_standalone.py  test_hwfit_macos.py  test_hwfit_windows.py  test_ics_export_escaping.py  test_kv_cache_invalidation_2927.py  test_lightweight_tools.py  test_llm_core_ollama.py  test_lodestar_dispatcher.py  test_logs_cli_resolve_nonstring.py  test_mail_cli_read_empty_fetch.py  test_mail_cli_recipients.py  test_mcp_cli_env_serialize.py  test_mcp_cli_json.py  test_mcp_manager.py  test_mcp_oauth.py  test_mcp_tool_allowlist.py  test_memory_cli_rows.py  test_notes_cli_items.py  test_personal_cli_rows.py  test_plugin_loader.py  test_plugin_panels.py  test_plugin_routes.py  (+29 more)
(+5 files in other folders)
